--- a/config.env
+++ b/config.env
@@ -1,17 +1,14 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-# REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "6144020519:AAGb2_0KydEaV-yJEwEVAR6LgY_kImkUS8k"                              # Require restart after changing it while bot running
+OWNER_ID = "6146726705"                               # Require restart after changing it while bot running
+TELEGRAM_API = "1747265"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "47f031293f55361c76c27da11916179b"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-1001809579757"                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
@@ -31,7 +28,7 @@ USER_TD_MODE = ""
 USER_TD_SA = ""
 INDEX_URL = ""
 USE_SERVICE_ACCOUNTS = "False"
-IS_TEAM_DRIVE = "False"
+IS_TEAM_DRIVE = "True"
 STOP_DUPLICATE = "False"
 DISABLE_DRIVE_LINK = "False"
 GD_INFO = "Uploaded by WZML-X"
