--- a/config.env
+++ b/config.env
@@ -23,10 +23,10 @@ FSUB_IDS = ""
 BOT_PM = ""
 
 # GDrive Tools
-GDRIVE_ID = ""
+GDRIVE_ID = "1Q7vgc9Le9Fls8MUY7VzT1GgwoAjxJ_9I"
 USER_TD_MODE = ""
 USER_TD_SA = ""
-INDEX_URL = ""
+INDEX_URL = "https://yhills.chammii.workers.dev/0:"
 USE_SERVICE_ACCOUNTS = "False"
 IS_TEAM_DRIVE = "True"
 STOP_DUPLICATE = "False"
